# perception-with-intent

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.beads/: issues.jsonl  last-touched
.github/workflows/: ci-smoke.yml  ci.yml  deploy-agents.yml  deploy-dashboard.yml  deploy-firebase-dashboard.yml  deploy-mcp.yml  deploy.yml  test.yml
000-docs/: 042-AA-REPT-perception-release-v0.5.0.md  043-AA-AUDT-appaudit-devops-playbook.md  6767-PP-PLAN-release-log.md  6767-PP-PLAN-rssatoms-discord-epic.md  6767-REF-github-rss-feed-sources.md  ingestion-run-button-debug.md
dashboard/: .env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dashboard/src/: App.tsx  firebase.ts  index.css
dashboard/src/components/: AlertsCard.tsx  AuthorRow.tsx  AuthorsCard.tsx  EmptyState.tsx  FooterBranding.tsx  IngestionButton.tsx  MobileNav.tsx  SourceHealthCard.tsx  SystemActivityCard.tsx  ThemeToggle.tsx  TodayBriefCard.tsx  TopicWatchlistCard.tsx
dashboard/src/components/ui/: card.tsx  skeleton.tsx  sonner.tsx
dashboard/src/hooks/: useAutoIngestion.ts  useTheme.tsx
dashboard/src/lib/: design-tokens.ts
dashboard/src/pages/: About.tsx  Articles.tsx  Authors.tsx  DailyBriefs.tsx  Dashboard.tsx  Login.tsx
dashboard/src/types/: author.ts
dashboard/src/utils/: text.ts  time.ts
docs/: index.html
feed-testing/: brex_top_100_feeds.py  test_all_feeds.py
functions/: index.js  package.json
infra/terraform/envs/dev/: terraform.tfvars
perception_app/mcp_service/: main.py  requirements.txt
perception_app/mcp_service/config/: rss_sources.yaml
perception_app/mcp_service/routers/: logging.py  rss.py  storage.py  trigger.py
perception_app/perception_agent/agents/agent_0_orchestrator/: __init__.py  agent.py  agent_engine_app.py  root_agent.yaml
perception_app/perception_agent/agents/agent_1_source_harvester/: root_agent.yaml
perception_app/perception_agent/config/: author_sources.yaml  rss_sources.yaml
perception_app/perception_agent/tools/: agent_1_tools.py  agent_4_tools.py
scripts/: generate-author-bios.py  import-author-feeds.py  run_all_tests.sh  run_tests.sh  seed-firestore.js
tests/: __init__.py  conftest.py
tests/agent/: __init__.py  test_agent_0_orchestrator.py
tests/api/: __init__.py  test_mcp_service.py  test_trigger_integration.py
tests/e2e/: __init__.py  conftest.py  test_dashboard.py  test_dashboard_data.py  test_firebase_auth.py
tests/factories/: __init__.py  agent_factory.py  article_factory.py  rss_factory.py  summary_factory.py  topic_factory.py
tests/firebase/: __init__.py  conftest.py  test_collection_schemas.py  test_dashboard_queries.py  test_firestore_config.py  test_firestore_indexes.py  test_firestore_rules.py
tests/gcp/: __init__.py  conftest.py  test_cloud_logging.py  test_cloud_run_health.py  test_error_reporting.py
tests/integration/: __init__.py  test_pipeline.py
tests/mcp/: __init__.py  test_mcp_routers.py  test_trigger_router.py
tests/security/: __init__.py  test_security_validation.py
tests/tui/: __init__.py  test_tui_components.py
tests/unit/: __init__.py  test_bulk_scenarios.py  test_comprehensive_validation.py  test_data_validation.py  test_exhaustive_parametrized.py  test_factories.py  test_rss_parsing.py  test_utils.py
